--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,24 @@
 {
   "manifest_version": 2,
 
-  "name": "Home",
+  "name": "Home.Space",
   "description": "Finding a suitable rental",
   "version": "1.0",
 
-  "browser_action": {
-    "default_icon": "homeIcon2.png",
+  "page_action": {
+    "default_icon": "homeIcon32x32.png",
+    "default_title": "Check additional info",
     "default_popup": "popup.html"
   },
+
+  "background": {
+    "scripts": ["eventPage.js"],
+    "persistent": false
+  },
+
   "permissions": [
+    "declarativeContent",
     "activeTab",
-    "https://ajax.googleapis.com/"
+    "https://home-space.s3.amazonaws.com/"
   ]
 }
