URL Constraint is removed

--- a/manifest.json
+++ b/manifest.json
@@ -5,15 +5,10 @@
   "description": "Finding a suitable rental",
   "version": "1.0",
 
-  "page_action": {
+  "browser_action": {
     "default_icon": "homeIcon32x32.png",
     "default_title": "Check additional info",
     "default_popup": "popup.html"
-  },
-
-  "background": {
-    "scripts": ["eventPage.js"],
-    "persistent": false
   },
 
   "permissions": [
